# signaldata

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE
lib/json/: json.h
src/technical_indicator/: accumulation_distribution.h  aroon.h  average_true_range.h  average_true_range_percent.h  bollinger_bands.h  chaikin_money_flow.h  hull_moving_average.h  ichimoku_cloud.h  momentum.h  money_flow.h  moving_average_envelope.h  simple_moving_average.h  standard_deviation.h  standard_variance.h  true_range.h  typical_price.h  util.h  weighted_moving_average.h
test/: auto_test.cpp
